fixed overflow issues

--- a/src/css/components/labbook/labbook.scss
+++ b/src/css/components/labbook/labbook.scss
@@ -384,8 +384,8 @@
 .Labbook__private{
   display: inline-flex;
   margin: 0 0 0 20px;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background: url(../images/icons/lock-grey.svg) no-repeat center center;
   background-size: 16px;
 }
